# diffusion_policy

./: .gitignore  README.md  notes.md  pyproject.toml
data/pusht_cchi_v1.zarr/data/action/: .zarray  0.0  1.0  10.0  11.0  12.0  13.0  14.0  15.0  16.0  17.0  18.0  19.0  2.0  20.0  21.0  22.0  23.0  24.0  25.0  26.0  27.0  28.0  29.0  3.0  30.0  31.0  32.0  33.0  34.0  35.0  36.0  37.0  38.0  39.0  4.0  40.0  41.0  42.0  43.0  (+39 more)
data/pusht_cchi_v1.zarr/data/img/: .zarray  0.0.0.0  1.0.0.0  10.0.0.0  11.0.0.0  12.0.0.0  13.0.0.0  14.0.0.0  15.0.0.0  16.0.0.0  17.0.0.0  18.0.0.0  19.0.0.0  2.0.0.0  20.0.0.0  21.0.0.0  22.0.0.0  23.0.0.0  24.0.0.0  25.0.0.0  26.0.0.0  27.0.0.0  28.0.0.0  29.0.0.0  3.0.0.0  30.0.0.0  31.0.0.0  32.0.0.0  33.0.0.0  34.0.0.0  35.0.0.0  36.0.0.0  37.0.0.0  38.0.0.0  39.0.0.0  4.0.0.0  40.0.0.0  41.0.0.0  42.0.0.0  43.0.0.0  (+39 more)
data/pusht_cchi_v1.zarr/data/keypoint/: .zarray  0.0.0  1.0.0  10.0.0  11.0.0  12.0.0  13.0.0  14.0.0  15.0.0  16.0.0  17.0.0  18.0.0  19.0.0  2.0.0  20.0.0  21.0.0  22.0.0  23.0.0  24.0.0  25.0.0  26.0.0  27.0.0  28.0.0  29.0.0  3.0.0  30.0.0  31.0.0  32.0.0  33.0.0  34.0.0  35.0.0  36.0.0  37.0.0  38.0.0  39.0.0  4.0.0  40.0.0  41.0.0  42.0.0  43.0.0  (+39 more)
data/pusht_cchi_v1.zarr/data/n_contacts/: .zarray  0.0  1.0  10.0  (+75 more)
diffusion_policy/: README.md  config.yaml  dataset.py  download_v7.py  env_test.py  envs.py  inference.py  main.py  train.py
diffusion_policy/configs/: README.md  config_v1.yaml
diffusion_policy/models/: README.md  config.py  resnet.py  unet.py
scripts/: README.md  config.py  env_test.py  inspect_data.py
(+81 files in other folders)
